Added speed bar.
Added speed bar (0.1s to 0.5s).
Added array button (Doesn't work yet).
Added rewind button.
Moved `step_delay` inside `step_config`.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<div id=arr></div>
 		<div id=tag></div>
 		<div id=wrap></div>
-		<div id=ctrl><img src="assets/img/pause.png" draggable=false><img src="assets/img/resume.png" disabled draggable=false><img src="assets/img/play.png" draggable=false><img src="assets/img/align.png" draggable=false></div>
+		<div id=ctrl><img src="assets/img/rewind.png" disabled draggable=false><img src="assets/img/pause.png" draggable=false><img src="assets/img/resume.png" disabled draggable=false><img src="assets/img/play.png" draggable=false><img src="assets/img/align.png" draggable=false><img src="assets/img/array.png" draggable=false><div><div></div></div></div>
 		<script src=index.js></script>
 	</body>
 </html>
