--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<div id=space>
 			<img id=mailman src=assets/img/mailman.png draggable=false hidden>
 		</div>
-		<div id=msg><div><div>Unsorted</div></div></div>
-		<div id=ctrl><img src="assets/img/play.png" disabled draggable=false><img src="assets/img/resume.png" disabled draggable=false><img src="assets/img/pause.png" disabled draggable=false><img src="assets/img/rewind.png" disabled draggable=false><img src="assets/img/array.png" draggable=false><img src="assets/img/sortdist.png" draggable=false><div><div></div></div></div>
+		<div id=msg><div><div></div></div></div>
+		<div id=ctrl><img src="assets/img/play.png" disabled draggable=false><img src="assets/img/pause.png" disabled draggable=false><img src="assets/img/array.png" draggable=false disabled><img src="assets/img/sortdist.png" draggable=false><div><div></div></div></div>
 		<div id=msg_sel hidden>
 			<dim></dim>
 			<div id=win><table><tbody></tbody></table></div>
