Now asks for date and time input.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 			<div>
 				<label>Who's the recipient?</label>
 				<input id=msg_write_input type=text>
+				<input id=msg_write_date type=datetime-local>
 				<label class=btn>Nevermind...</label>
 			</div>
 		</div>
